# learning_cmake

./: .gitignore
BasicCProject/: CMakeLists.txt  main.c
MiniCProject/: CMakeLists.txt
MiniCProject/include/: my_project.h
MiniCProject/src/: main.c
MultiModuleProject/: CMakeLists.txt
MultiModuleProject/lib/: CMakeLists.txt  mylib.c
MultiModuleProject/src/: main.c
